--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "@heroicons/react": "^2.0.18",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.1"
